# lrgsglib

./: .gitattributes  .gitignore  .help_proteus.md  Makefile  README.md  lrgsgenv.yml  pyproject.toml
src/: L2D_IsingDynamics_Serialiser.py  L2D_Recon.py  L2D_SlaplSpect.py  L2D_TransCluster.py  L3D_Recon.py  L3D_Recon_srun.py  L3D_TransCluster.py
src/.trash/: L2D_SlaplSpect_old.py  Lattice2D_phasetr.py  lattc2dsq_IsingDynamics_mClusters.py  lattc2dsq_avgC.py  lattc2dsq_percClusters.py  lattice2d_RBIM_phase_transition.py  triangle_percolation.py
src/kernels/: ER_IsingDynamics.py  IsingDynamics.py  L2D.py  L2D_IsingDynamics.py  L2D_Recon.py  L2D_SlaplSpect.py  L3D.py  L3D_Recon.py  Recon.py  generic.py
src/lrgsglib/: __init__.py  core.py  loglib.py  proglib.py  shared.py
src/lrgsglib/Ccore/: LRGSG_utils.c  LRGSG_utils.h  README.md
src/lrgsglib/Ccore/statsys/: README.md
src/lrgsglib/config/: __init__.py  const.py  errwar.py  funcs.py
src/lrgsglib/config/progargs/: IsingDynamics.py  Lattice2D.py  Lattice3D.py  Recon.py  SignedGraph.py  SlaplSpect.py  __init__.py  common.py
src/lrgsglib/gt_patches/: objects.py
src/lrgsglib/nx_patches/: __init__.py  common.py
src/lrgsglib/nx_patches/DGMgraph/: DGMgraph.py  __init__.py  generators.py
src/lrgsglib/nx_patches/ErdosRenyi/: ErdosRenyi.py  __init__.py
src/lrgsglib/nx_patches/FullyConnected/: FullyConnected.py  __init__.py  animation.py
src/lrgsglib/nx_patches/HofieldNN/: HofieldNN.py  __init__.py  patterns.py
src/lrgsglib/nx_patches/Lattice2D/: Lattice2D.py  __init__.py  eigenspace.py  generators.py  paths.py
src/lrgsglib/nx_patches/Lattice3D/: Lattice3D.py  __init__.py  eigenspace.py  (+1 more)
src/lrgsglib/plotlib/: .trash_plotlib.py  __init__.py  animation.py  ax_patches.py  chladni.py  color.py  colorbars.py  colormaps.py  const_plotlib.py  lattices.py  lrg.py  mathplot.py  plot3d.py  tilings.py
src/lrgsglib/statsys/: BinDynSys.py  ContactProcess.py  IsingDynamics.py  IsingDynamics_DEV.py  SignedRW.py  VoterModel.py  __init__.py  common.py
src/lrgsglib/utils/: __init__.py  statsys.py
src/parsers/: ER_IsingDynamics.py  ER_IsingDynamics_Serialiser.py  L2D_IsingDynamics.py  L2D_IsingDynamics_Serialiser.py  L2D_Recon.py  L2D_SlaplSpect.py  L3D_Recon.py  L3D_Recon_srun.py
test/: simple_test.py  test_triangle_tiling.py
tools/py/: generate-env.py
(+86 files in other folders)
