[build-system]
requires = ["setuptools>=65", "pybind11>=2.10.0", "numpy>=1.19.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lrgsglib"
version = "0.1.0"
authors = [
  { name="Giulio Iannelli", email="giulioiannelli.w@gmail.com" },
  { name="Pablo Villegas", email="pablo.villegas@cref.it" },
]
description = "A package containing useful classes and functions for setting up the theoretical apparatus of the Laplacian Renormalization Group for Signed Graphs"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.19.0",
    "scipy>=1.7.0",
    "networkx>=2.6.0",
    "matplotlib>=3.5.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "tqdm>=4.60.0",
    "lmfit>=1.0.0",
    "powerlaw>=1.4.0",
    "cupy>=9.0.0",
    "pybind11>=2.10.0",
    "joblib>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "flake8>=4.0.0",
    "mypy>=0.910",
]
jupyter = [
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "ipywidgets>=7.0.0",
]

[project.urls]
"Homepage" = "https://github.com/giulioiannelli/lrgsglib"
"Bug Tracker" = "https://github.com/giulioiannelli/lrgsglib/issues"
"Documentation" = "https://github.com/giulioiannelli/lrgsglib/wiki"
"Source Code" = "https://github.com/giulioiannelli/lrgsglib"

[tool.setuptools.packages.find]
where = ["src"]
include = ["lrgsglib*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
lrgsglib = ["*.so", "*.pyd", "*.dll"]

[tool.black]
line-length = 80
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 80
multi_line_output = 3

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
